[package]
name = "tdc1000"
version = "0.2.0"
authors = ["Robert Hanyecz <rh@wertschuetz.de>"]
categories = ["embedded", "no-std"]
description = "no_std driver for the TDC1000 Ultrasonic Sensing Analog Front End"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/tdc1000"
edition = "2021"
repository = "https://github.com/robhany/tdc1000"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-bus = { version = "0.2", default-features = false }
portable-atomic = { version = "1.8", default-features = false, optional = true, features = [
  "require-cas",
] }

[features]
defaults = []
portable-atomic = ["dep:portable-atomic"]
